tester/testsuite/bad/many_error_msg.jl
int a() {
    return b(true, 1);
}

void b(int i, boolean x) {
   return 1;
}

void c() {
    int x = 4, y = true;
}

void d() {
    int d;
}

int d() {
    if (4 > 2) {
       return true;
    } else {
       x++;
    }
}